--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI = mongodb+srv://bryangodlive0:YZE9szia4bXMW7FK@buildong.ikaobk0.mongodb.net/?retryWrites=true&w=majority&appName=buildong
+SECRET_KEY = tEso9liedHcabHazHGtrum3x4tlhtmqn9AU3Rfbq5mE
