--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI = mongodb+srv://bryangodlive0:YZE9szia4bXMW7FK@buildong.ikaobk0.mongodb.net/?retryWrites=true&w=majority&appName=buildong
 SECRET_KEY = tEso9liedHcabHazHGtrum3x4tlhtmqn9AU3Rfbq5mE
+CLOUDINARY_CLOUD_NAME = dqjomdtlm
+CLOUDINARY_API_KEY = 631795163244365
+CLOUDINARY_API_SECRET = tF16eitf-pZEhllgg7AlHqXmcv8
