--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm install --legacy-peer-deps && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
