--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,21 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
+      {
+        "src": "package.json",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["**/*"]
         }
+      },
+      {
+        "src": "public/**",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        { "handle": "filesystem" },
-        { "src": "/.*", "dest": "index.js" }
+      { "handle": "filesystem" },
+      { "src": "/.*", "dest": "index.js" }
     ]
   }
+  
