--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,17 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": ["**/*"]
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
-      },
-      {
-        "src": "public/**",
-        "use": "@vercel/static"
-      }
     ],
     "routes": [
-      { "handle": "filesystem" },
-      { "src": "/.*", "dest": "index.js" }
+        { "handle": "filesystem" },
+        { "src": "/.*", "dest": "index.js" }
     ]
   }
-  
