MODEL : update construction model

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SECRET_KEY = tEso9liedHcabHazHGtrum3x4tlhtmqn9AU3Rfbq5mE
 CLOUDINARY_CLOUD_NAME = dqjomdtlm
 CLOUDINARY_API_KEY = 631795163244365
 CLOUDINARY_API_SECRET = tF16eitf-pZEhllgg7AlHqXmcv8
+MIDTRANS_SERVER_KEY = Mid-server-6PvWpWxBTR68ZW4s5FidotmQ
+MIDTRANS_CLIENT_KEY = Mid-client-kUacoLfDbEIHeB6k
